--- a/.gitignore/index.html
+++ b/.gitignore/index.html
@@ -49,7 +49,7 @@
        
       var particle_material = new THREE.PointsMaterial({
         size: 0.01, 
-        color: 0x80ffccaa, 
+        color: 0x80ffb6c1, 
         blending: THREE.AdditiveBlending,
         transparent: true,
         depthTest: true
